force-app/main/default/objects/OrgApexTrigger__c/OrgApexTrigger__c.object-meta.xml
<CustomObject>
    <description>Trigger information retrieved from polling for search functionality</description>
    <label>OrgApexTrigger</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrgApexTriggers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>