force-app/main/default/objects/OrgApexTrigger__c/fields/APIVersion__c.field-meta.xml
<CustomField>
    <fullName>APIVersion__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Trigger API Version</description>
    <label>APIVersion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>