force-app/main/default/objects/OrgApexTrigger__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Code of the Apex Trigger</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ApexTrigger</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>