force-app/main/default/objects/OrgApexTrigger__c/fields/TriggerName__c.field-meta.xml
<CustomField>
    <fullName>TriggerName__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Name of the Trigger</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TriggerName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>